--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,14 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-image: url('../images/cover-image-dark.png');
+  --bg-color: #000028;
+  --accent-color: #FF0070;
+  --title-color: #DB00FF;
+  --decor-color: #FF0070;
+  --text-color: #F1B2CE;
+  --text-accent-color: #000028;
+  --btn-hover-color: rgba(255, 0, 112, 0.4);
+}
+
+.theme-dark .header__record {
+  display: block;
 }
