--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,14 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-image: url('../images/cover-image-light.png');
+  --bg-color: #FFF1F7;
+  --accent-color: #FF8DCB;
+  --title-color: #FFC2E6;
+  --decor-color: #353430;
+  --text-color: #353430;
+  --text-accent-color: #353430;
+  --btn-hover-color: rgba(50, 49, 45, 0.4);
+}
+
+.theme-light .header__record {
+  display: none;
 }
