--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,426 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  font-family: var(--ff-text), monospace;
+  font-size: var(--font-size);
+  background-image: var(--bg-image);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  line-height: var(--line-height);
+}
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: var(--decor-size);
+  height: var(--decor-size);
+  border: 1px solid var(--decor-color);
+}
+
+.decorated-zone::before {
+  top: var(--padding-mobile);
+  right: var(--padding-mobile);
+  border-left: none;
+  border-bottom: none;
+}
+
+.decorated-zone::after {
+  bottom: var(--padding-mobile);
+  left: var(--padding-mobile);
+  border-right: none;
+  border-top: none;
+}
+
+.header {
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+  min-height: 100vh;
+  padding: var(--padding-mobile);
+  position: relative;
+}
+
+.header__record {
+  position: absolute;
+  top: var(--padding-mobile);
+  right: calc(var(--padding-mobile) + 9px);
+  font-size: var(--font-size);
+  font-weight: 400;
+  line-height: 25px;
+  color: var(--accent-color);
+  text-transform: uppercase;
+}
+
+.header__record::after {
+  content: "";
+  position: relative;
+  display: inline-block;
+  width: var(--record-dot-size);
+  height: var(--record-dot-size);
+  background-color: var(--accent-color);
+  box-shadow: 0 0 4px 2px var(--accent-color);
+  border-radius: 50%;
+  margin-block-end: 2px;
+}
+
+.header__theme-menu {
+  font-size: var(--font-size);
+  font-weight: 400;
+  line-height: 18px;
+  color: var(--decor-color);
+  text-align: center;
+  justify-self: end;
+  grid-row: 1;
+}
+
+.header__theme-menu-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 13px
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  text-transform: lowercase;
+  border: none;
+  cursor: pointer;
+  color: var(--decor-color);
+  padding-inline-start: 13px;
+  padding-inline-end: 13px;
+  padding-block-end: 2.5px;
+  padding-block-start: 2.5px;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--btn-hover-color);
+}
+
+.header__theme-menu-button:focus {
+  border-bottom: 1px solid var(--decor-color);
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-bottom: 1px solid var(--decor-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--decor-color);
+  pointer-events: none;
+}
+
+.header__title {
+  color: var(--title-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: var(--fw-bold);
+  line-height: 0.83;
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.header__text-block {
+  background-color: var(--accent-color);
+  color: var(--text-accent-color);
+  font-weight: var(--fw-bold);
+  font-size: var(--font-size);
+  line-height: var(--line-height);
+}
+
+.content {
+  padding: 40px var(--padding-mobile);
+}
+
+.section {
+  margin-block-end: 50px;
+}
+
+.section:last-child {
+  margin-block-end: 0;
+}
+
+.section__title {
+  color: var(--decor-color);
+  font-size: var(--font-size);
+  font-weight: var(--fw-bold);
+  line-height: var(--line-height);
+  margin-block-end: 20px;
+}
+
+.section__content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.section__subtitle {
+  background-color: var(--accent-color);
+  color: var(--text-accent-color);
+  font-weight: var(--fw-bold);
+  font-size: var(--font-size);
+  line-height: var(--line-height);
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.card__title {
+  font-size: var(--font-size);
+  font-weight: var(--fw-bold);
+  line-height: var(--line-height);
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+  color: var(--text-accent-color);
+}
+
+.card__title-recommendation {
+  font-weight: var(--fw-regular);
+}
+
+.card__text {
+  font-size: var(--font-size);
+  line-height: var(--line-height);
+  color: var(--text-color)
+}
+
+.card__link {
+  color: var(--text-color);
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.card__link:hover {
+  border-bottom: 1px solid var(--text-color);
+}
+
+.card__link:focus {
+  outline: 1px solid var(--text-color);
+  outline-offset: 1px;
+}
+
+.card__link:focus-visible {
+  outline: 1px solid var(--text-color);
+  outline-offset: 1px;
+}
+
+.section__title-gallery {
+  font-size: var(--font-size);
+  font-weight: var(--fw-bold);
+  line-height: var(--line-height);
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  margin-block-start: var(--padding-mobile);
+}
+
+.gallery__image {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: var(--padding-mobile);
+  position: relative;
+}
+
+.footer__title {
+  color: var(--title-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: var(--fw-bold);
+  line-height: 0.83;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+@media (width >= 768px) {
+  .header {
+    padding: var(--padding-desktop);
+  }
+
+  .header__record {
+    top: var(--padding-desktop);
+    right: calc(var(--padding-desktop) + 9px);
+  }
+
+  .decorated-zone::before {
+    top: var(--padding-desktop);
+    right: var(--padding-desktop);
+  }
+
+  .decorated-zone::after {
+    bottom: var(--padding-desktop);
+    left: var(--padding-desktop);
+  }
+
+  .header__title {
+    margin-inline-start: -20px;
+  }
+
+  .header__text-block {
+    width: 364px;
+    justify-self: end;
+  }
+
+  .content {
+    padding: 60px var(--padding-desktop);
+  }
+
+  .section {
+    margin-block-end: 80px;
+  }
+
+  .section__difficult,
+  .section__recommendations {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 20px;
+  }
+
+  .section__concentration {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, min-content);
+  }
+
+  .section__content-concentration {
+    grid-column: 1 / 5;
+    grid-row: 2;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    grid-auto-flow: dense;
+    gap: 20px;
+    margin-block-start: var(--padding-desktop);
+  }
+
+  img {
+    min-width: 100%;
+    min-height: 100%;
+    display: block;
+    object-fit: cover;
+  }
+
+  .gallery__image-sunset {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+  }
+
+  .gallery__image-icecream {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+
+  .gallery__image-tape {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .gallery__image-books {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .gallery__image-street {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+
+  .footer {
+    padding: var(--padding-desktop);
+  }
+}
+
+@media (width >= 1024px) {
+  .header {
+    align-items: normal;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .header__title {
+    font-size: clamp(7.25rem, 5.769rem + 6.317vw, 9.813rem);
+  }
+
+  .header__text-block {
+    width: 491px;
+    align-self: center;
+  }
+
+  .section__title {
+    margin-block-end: 0;
+  }
+
+  .section__difficult,
+  .section__recommendations {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .section__content-difficult {
+    grid-column: 2 / 4;
+  }
+
+  .section__concentration {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, min-content);
+  }
+
+  .section__content-concentration {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .card__multitasking {
+    grid-column: 1;
+    grid-row: 2 / 4;
+  }
+
+  .card__food {
+    grid-column: 2;
+    grid-row: 2 / 4;
+  }
+
+  .card__gadgets {
+    grid-column: 3;
+    grid-row: 2 / 4;
+  }
+
+  .section__content-recommendations {
+    grid-column: 2 / 4;
+  }
+
+  .footer__title {
+    font-size: clamp(7.25rem, 5.769rem + 6.317vw, 9.813rem);
+  }
 }
