--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,21 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --ff-text: 'IBM Plex mono', monospace;
+  --fw-regular: 400;
+  --fw-bold: 700;
+  --line-height: 23.4px;
+  --font-size: 18px;
+  --bg-image: url('../images/cover-image-dark.png');
+  --bg-color: #000028;
+  --accent-color: #FF0070;
+  --title-color: #DB00FF;
+  --decor-color: #FF0070;
+  --text-color: #F1B2CE;
+  --text-accent-color: #000028;
+  --btn-hover-color: rgba(255, 0, 112, 0.4);
+
+  --padding-mobile: 10px;
+  --padding-desktop: 20px;
+
+  --decor-size: 25px;
+  --record-dot-size: 9px;
+}
