--- a/styles/style.css
+++ b/styles/style.css
@@ -383,6 +383,10 @@
     margin-block-end: 0;
   }
 
+  .section__title:last-of-type {
+    margin-block-end: 0;
+  }
+
   .section__difficult,
   .section__recommendations {
     display: grid;
