--- a/styles/light.css
+++ b/styles/light.css
@@ -12,3 +12,19 @@
 .theme-light .header__record {
   display: none;
 }
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-image: url('../images/cover-image-light.png');
+    --bg-color: #FFF1F7;
+    --accent-color: #FF8DCB;
+    --title-color: #FFC2E6;
+    --text-color: #353430;
+    --text-accent-color: #353430;
+    --btn-hover-color: rgba(50, 49, 45, 0.4);
+  }
+
+  :root .header__record {
+    display: none;
+  }
+}
