--- a/styles/light.css
+++ b/styles/light.css
@@ -19,6 +19,7 @@
     --bg-color: #FFF1F7;
     --accent-color: #FF8DCB;
     --title-color: #FFC2E6;
+    --decor-color: #353430;
     --text-color: #353430;
     --text-accent-color: #353430;
     --btn-hover-color: rgba(50, 49, 45, 0.4);
