--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,8 @@
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   align-items: center;
-  min-height: 100vh;
+  min-height: 668px;
+  height: 100vh;
   padding: var(--padding-mobile);
   position: relative;
 }
@@ -148,16 +149,16 @@
   margin-block-end: 0;
 }
 
+.section__concentration {
+  margin-block-end: 48px;
+}
+
 .section__title {
   color: var(--decor-color);
   font-size: var(--font-size);
   font-weight: var(--fw-bold);
   line-height: var(--line-height);
   margin-block-end: 20px;
-}
-
-.section__title:last-of-type {
-  margin-block-end: 19px;
 }
 
 .section__content {
@@ -244,7 +245,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 668px;
+  height: 100vh;
   padding: var(--padding-mobile);
   position: relative;
 }
@@ -259,6 +261,7 @@
 
 @media (width >= 768px) {
   .header {
+    min-height: 1024px;
     padding: var(--padding-desktop);
   }
 
@@ -292,10 +295,6 @@
 
   .section {
     margin-block-end: 80px;
-  }
-
-  .section__difficult,
-  .section__recommendations {
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 20px;
@@ -305,6 +304,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, min-content);
+    margin-block-end: 80px;
   }
 
   .section__content-concentration {
@@ -359,6 +359,7 @@
 
 @media (width >= 1024px) {
   .header {
+    min-height: 768px;
     align-items: normal;
   }
 
@@ -387,8 +388,7 @@
     margin-block-end: 0;
   }
 
-  .section__difficult,
-  .section__recommendations {
+  .section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
@@ -402,6 +402,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, min-content);
+    gap: 0;
   }
 
   .section__content-concentration {
