Changed grid react flexibly

--- a/styles/light.css
+++ b/styles/light.css
@@ -3,14 +3,15 @@
   --bg-color: #FFF1F7;
   --accent-color: #FF8DCB;
   --title-color: #FFC2E6;
-  --decor-color: #353430;
   --text-color: #353430;
   --text-accent-color: #353430;
+  --decor-color: #353430;
   --btn-hover-color: rgba(50, 49, 45, 0.4);
+  --rec-display: none;
 }
 
 .theme-light .header__record {
-  display: none;
+  display: var(--rec-display);
 }
 
 @media (prefers-color-scheme: light) {
@@ -19,13 +20,14 @@
     --bg-color: #FFF1F7;
     --accent-color: #FF8DCB;
     --title-color: #FFC2E6;
-    --decor-color: #353430;
     --text-color: #353430;
     --text-accent-color: #353430;
+    --decor-color: #353430;
     --btn-hover-color: rgba(50, 49, 45, 0.4);
+    --rec-display: none;
   }
 
   :root .header__record {
-    display: none;
+    display: var(--rec-display);
   }
 }
