--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,12 +3,13 @@
   --bg-color: #000028;
   --accent-color: #FF0070;
   --title-color: #DB00FF;
-  --decor-color: #FF0070;
   --text-color: #F1B2CE;
   --text-accent-color: #000028;
+  --decor-color: #FF0070;
   --btn-hover-color: rgba(255, 0, 112, 0.4);
+  --rec-display: block;
 }
 
 .theme-dark .header__record {
-  display: block;
+  display: var(--rec-display);
 }
