--- a/styles/style.css
+++ b/styles/style.css
@@ -302,8 +302,7 @@
 
   .section__concentration {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, min-content);
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     margin-block-end: 80px;
   }
 
@@ -380,14 +379,6 @@
     align-self: center;
   }
 
-  .section__title {
-    margin-block-end: 0;
-  }
-
-  .section__title:last-of-type {
-    margin-block-end: 0;
-  }
-
   .section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -407,22 +398,8 @@
 
   .section__content-concentration {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .card__multitasking {
-    grid-column: 1;
-    grid-row: 2 / 4;
-  }
-
-  .card__food {
-    grid-column: 2;
-    grid-row: 2 / 4;
-  }
-
-  .card__gadgets {
-    grid-column: 3;
-    grid-row: 2 / 4;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-column: 1 / 4;
   }
 
   .section__content-recommendations {
